welcome.lessons.welcome.bat.bool2.AnswerCell.scala.error
answerCell:2: error: not found: value morning
                                                                              else if (morning) {if (mum) (return true) else return false}
                                                                                       ^answerCell:2: error: not found: value mum
                                                                              else if (morning) {if (mum) (return true) else return false}
                                                                                                     ^